# Physical-AI-Humanoids-book

./: .gitignore  CLAUDE.md  PROJECT_COMPLETION_SUMMARY.md  validation_output.txt
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
auth-server/: .gitignore  package-lock.json  package.json  tsconfig.json
auth-server/src/: index.ts
backend/: check_methods.py  pyproject.toml  render.yaml  requirements.txt
backend/backend/: database.py  ingest.py  migrations.py  test_qdrant.py
backend/migrations/: 001_initial_schema.sql  002_chat_threads_and_messages.sql  migrate.py
backend/src/backend/: main.py  migrate.py  neon_store.py  store.py
backend/src/backend/api/: chat_history.py
backend/src/backend/api/v1/: __init__.py  chat.py  schemas.py
backend/src/backend/database/: __init__.py  connection.py
backend/src/backend/models/: __init__.py  base.py  chat_history.py  chat_message.py  chat_thread.py  session.py  user.py
backend/src/backend/services/: __init__.py  auth_validation.py  chat_history_service.py  chat_thread_service.py  jwt_utils.py  prompt_personalization.py  repositories.py
example/migrations/: 001_create_auth_tables.sql  002_create_chat_history.sql  002_create_chat_history_table.sql  migrate.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  typecheck_output.txt  typecheck_output_2.txt
frontend/docs/: intro.md
history/adr/: 001-chat-history-architecture.adr.md
history/prompts/: 001-fix-frontend-errors.red.prompt.md  002-create-remaining-documents.general.prompt.md
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qdrant-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatkit-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+182 files in other folders)
